--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "host": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
+    "gsap": "^3.12.7",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.1",
     "react": "^18.3.1",
