--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.4.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
